fixed text position when collapsed

--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -6,3 +6,6 @@ table {
 mat-expansion-panel{
   width:80%;
 }
+.cell{
+  vertical-align: text-top; ;
+}
